edit_security_config_to_allow_CORS_Policy